--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,12 +7,20 @@ body, html {
   background-color: #fff;
 }
 
+ul {
+  list-style: none;
+}
+
 li {
   display: list-item;
 }
 
-p {
+div, p {
   display: block;
+}
+
+a {
+  text-decoration: none;
 }
 
 .flash-box {
@@ -28,10 +36,10 @@ p {
   color: #fff;
   width: 300px;
   height: 100%;
+  float: left;
 
   a {
     color: #fff;
-    text-decoration: none;
   }
 
   .side-header {
@@ -59,6 +67,7 @@ p {
     height: calc(100vh - 100px);
     background-color: #2f3e51;
     padding: 20px 20px 0 20px;
+    overflow: scroll;
     .group {
       margin-bottom: 40px;
       font-weight: bold;
@@ -71,5 +80,65 @@ p {
       }
     }
   }
+}
 
+.chat-main {
+  float: left;
+  width: calc(100vw - 300px);
+  .main-header {
+    height: 100px;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: solid 1px #eee;
+    .current-group {
+      font-size: 20px;
+      color: #333;
+      margin-top: 35px;
+      &__name {
+        margin-bottm: 15px;
+        font-size: 20px;
+        color: #333333;
+      }
+      .member-list {
+        font-size: 12px;
+        color: #999999;
+        display: flex;
+        margin-top: 15px;
+      }
+    }
+    &__edit-btn {
+      margin-top: 28px;
+      padding : 0 20px;
+      height: 40px;
+      line-height: 40px;
+      color: #38aef0;
+      border: solid 1px #38aef0;
+    }
+  }
+  .messages {
+    padding: 46px 40px;
+    height: calc(100vh - 100px);
+    overflow: scroll;
+    .message {
+      padding-bottom: 40px;
+      .upper-info {
+        display: flex;
+        margin-bottom: 10px;
+        &__user {
+          color: #434a54;
+          font-weight: bold;
+        }
+        &__date {
+          color: #999999;
+          font-size: 12px;
+          padding-left: 10px;
+        }
+      }
+      &__text {
+        color: #434a54;
+        font-size: 14px;
+      }
+    }
+  }
 }
