--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -8,8 +8,8 @@ body, html {
 }
 
 .flash-box {
-  color: #fff;
-  background-color: #38aef0;
+  color: $flashBoxFont;
+  background-color: $flashBox;
   text-align: center;
 }
 
@@ -38,24 +38,22 @@ a {
 }
 
 .chat-side {
-  color: #fff;
+  color: $sideFont;
   width: 300px;
   float: left;
 
   a {
-    color: #fff;
+    @include side-font(16px);
   }
 
   .side-header {
     height: 100px;
     width: 100%;
-    display: flex;
-    background-color: #253141;
     padding: 0 20px;
-    font-weight: bold;
-    font-size: 16px;
+    background-color: $sideHeader;
+    @include side-font(16px);
+    @include flexBox();
     align-items: center;
-    justify-content: space-between;
     .user-menu {
       display: flex;
       li {
@@ -66,7 +64,7 @@ a {
 
   .groups {
     height: calc(100vh - 100px);
-    background-color: #2f3e51;
+    background-color: $sideGroupList;
     padding: 20px 20px 0 20px;
     overflow: scroll;
     .group {
@@ -89,21 +87,21 @@ a {
   .main-header {
     height: 100px;
     padding: 0 40px;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: solid 1px #eee;
+    background-color: $mainHeader;
+    @include flexBox();
+    border-bottom: solid 1px $border;
     .current-group {
       font-size: 20px;
-      color: #333;
+      color: $currentGroupName;
       margin-top: 35px;
       &__name {
         margin-bottm: 15px;
         font-size: 20px;
-        color: #333333;
+        color: $currentGroupName;
       }
       .member-list {
         font-size: 12px;
-        color: #999999;
+        color: $currentGroupMember;
         display: flex;
         margin-top: 15px;
       }
@@ -113,31 +111,32 @@ a {
       padding : 0 20px;
       height: 40px;
       line-height: 40px;
-      color: #38aef0;
-      border: solid 1px #38aef0;
+      color: $flashBox;
+      border: solid 1px $flashBox;
     }
   }
   .messages {
     padding: 46px 40px;
     height: calc(100vh - 190px);
     overflow: scroll;
+    background-color: $mainMessages;
     .message {
       padding-bottom: 40px;
       .upper-info {
         display: flex;
         margin-bottom: 10px;
         &__user {
-          color: #434a54;
+          color: $messageUser;
           font-weight: bold;
         }
         &__date {
-          color: #999999;
+          color: $messageDate;
           font-size: 12px;
           padding-left: 10px;
         }
       }
       &__text {
-        color: #434a54;
+        color: $messageText;
         font-size: 14px;
       }
     }
@@ -145,7 +144,7 @@ a {
   .form {
     height: 90px;
     padding: 20px 40px;
-    background-color: #ddd;
+    background-color: $form;
   }
   .new-message {
     display: flex;
@@ -156,9 +155,9 @@ a {
         height: 50px;
         width: 100%;
         padding: 0 10px;
-        background-color: #fff;
+        background-color: $inputBox;
         line-height: 50px;
-        color: #434a54;
+        color: $messageText;
         border-style: none;
       }
       .image-label {
@@ -174,8 +173,8 @@ a {
     }
     &__submit-btn {
       width: 100px;
-      background-color: #38aef0;
-      color: #fff;
+      background-color: $flashBox;
+      color: $flashBoxFont;
       margin-left: 15px;
       padding: 0 30px;
     }
