--- a/app/views/messages/_chat-side.html.haml
+++ b/app/views/messages/_chat-side.html.haml
@@ -1,24 +1,24 @@
 .chat-side
-  .side-header
-    %p.side-header__user-name
+  .chat-side__header
+    %p.chat-side__header__user-name
       user-name
-    %ul.user-menu
-      %li.user-menu__edit-user
+    %ul.chat-side__header__user-menu
+      %li.chat-side__header__user-menu__edit-user
         = link_to root_path do
           %i.fa.fa-edit
-      %li.user-menu__new-group
+      %li.chat-side__header__user-menu__new-group
         = link_to root_path do
           %i.fa.fa-cog
   .groups
     = link_to root_path do
-      .group
-        %p.group__name
+      .groups__group
+        %p.groups__group__name
           group-name
-        %p.group__last-message
+        %p.groups__group__last-message
           last-massage
     = link_to root_path do
-      .group
-        %p.group__name<
+      .groups__group
+        %p.groups__group__name
           group-name
-        %p.group__last-message
+        %p.groups__group__last-message
           last-massage
