--- a/app/views/shared/_chat-side.html.haml
+++ b/app/views/shared/_chat-side.html.haml
@@ -4,21 +4,16 @@
       = current_user.name
     %ul.chat-side__header__user-menu
       %li.chat-side__header__user-menu__new-group
-        = link_to root_path do
+        = link_to new_group_path do
           %i.fa.fa-edit
       %li.chat-side__header__user-menu__edit-user
         = link_to edit_user_path(current_user) do
           %i.fa.fa-cog
   .groups
-    = link_to root_path do
+    - current_user.groups.each do |group|
       .groups__group
-        %p.groups__group__name
-          group-name
-        %p.groups__group__last-message
-          last-massage
-    = link_to root_path do
-      .groups__group
-        %p.groups__group__name
-          group-name
-        %p.groups__group__last-message
-          last-massage
+        = link_to group_messages_path(group) do
+          %p.groups__group__name
+            = group.name
+          %p.groups__group__last-message
+            last-massage
