--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -11,7 +11,7 @@
           Member：
           %li.chat-main__header__current-group__member-list__member
             member-name1
-      = link_to edit_group_path(@group) do
+      = link_to "/groups/1/edit" do
         .chat-main__header__edit-btn
           Edit
 
