--- a/app/views/shared/_chat-side.html.haml
+++ b/app/views/shared/_chat-side.html.haml
@@ -16,4 +16,4 @@
           %p.groups__group__name
             = group.name
           %p.groups__group__last-message
-            last-massage
+            = group.show_last_message
