--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -152,8 +152,12 @@ a {
     padding: 20px 40px;
     background-color: $form;
   }
-  .new-message {
+  
+  .new_message {
     display: flex;
+  }
+
+  .new-message {
     &__input-box {
       width: 100%;
       position: relative;
@@ -168,8 +172,8 @@ a {
       }
       &__image-label {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 5px;
+        right: 5px;
         font-size: 1.3rem;
         cursor: pointer;
         &__input {
