--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,8 +10,9 @@
         %ul.chat-main__header__current-group__member-list
           Member：
           %li.chat-main__header__current-group__member-list__member
-            member1
-      = link_to "/groups/1/edit" do
+            - @group.users.each do |user|
+              = user.name
+      = link_to edit_group_path(@group.id) do
         .chat-main__header__edit-btn
           Edit
 
