--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -4,5 +4,8 @@
       = message.user.name
     %p.messages__message__upper-info__date
       = message.created_at.strftime("%Y/%m/%d %H:%M")
-  .messages__message__text
-    = message.message
+  .messages__message__lower-message
+    - if message.message.present?
+      %p.messages__message__lower-message__text
+        = message.message
+    = image_tag message.image.url, class: 'messages__message__lower-message__image' if message.image.present?
