--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -20,6 +20,7 @@ body, html {
 }
 
 .wrapper {
+  display: flex;
 }
 
 ul {
@@ -72,7 +73,7 @@ a {
     height: calc(100vh - 100px);
     background-color: $sideGroupList;
     padding: 20px 20px 0 20px;
-    overflow: scroll;
+    overflow-y: scroll;
     &__group {
       margin-bottom: 40px;
       font-weight: bold;
@@ -124,7 +125,7 @@ a {
   .messages {
     padding: 46px 40px;
     height: calc(100vh - 190px);
-    overflow: scroll;
+    overflow-y: scroll;
     background-color: $mainMessages;
     &__message {
       padding-bottom: 40px;
