--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -21,7 +21,7 @@
 
     .form
       .new-message
-        = form_for [@group, @message] do |f|
+        = form_for [@group, @message], html: { id: 'new-message' } do |f|
           .new-message__input-box
             = f.text_field :message, class: 'new-message__input-box__text', placeholder: 'type a message'
             .new-message__input-box__image-label
