--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.messages__message
+.messages__message{ "data-message_id": message.id }
   .messages__message__upper-info
     %p.messages__message__upper-info__user
       = message.user.name
