--- a/app/views/shared/_form.html.haml
+++ b/app/views/shared/_form.html.haml
@@ -37,7 +37,7 @@
                 = user.name
                 .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
                   削除
-        #user_ids{ value: user_ids }
+        #user_ids{ "data-user_ids": user_ids }
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
