--- a/app/views/shared/_chat-side.html.haml
+++ b/app/views/shared/_chat-side.html.haml
@@ -9,6 +9,10 @@
       %li.chat-side__header__user-menu__edit-user
         = link_to edit_user_path(current_user) do
           %i.fa.fa-cog
+      %li.chat-side__header__user-menu__edit-user
+        = link_to admin_users_index_path do
+          %i.fa.fa-history
+
   .groups
     - current_user.groups.each do |group|
       .groups__group
