スタイル調整とテンプレートへの切り出し

--- a/app/views/admin_users/index.html.haml
+++ b/app/views/admin_users/index.html.haml
@@ -4,11 +4,8 @@
 
   .chat-main
     .chat-main__header
-    - @activities.each do |activity|
-      = link_to activity.owner.name, activity.owner if activity.owner
-      さんが
-      = link_to activity.trackable.name, activity.trackable
-      を
-      - action = activity.key == "group.create" ? "作成" : "更新"
-      = action
-      しました。
+      %h2.chat-main__header__title
+        タイムライン
+
+    .timeline
+      = render partial: "activity", collection: @activities
