--- a/app/views/admin_users/_activity.html.haml
+++ b/app/views/admin_users/_activity.html.haml
@@ -4,10 +4,9 @@
             = activity.created_at.strftime("%Y/%m/%d %H:%M")
     .timeline__content__lower
         %span.timeline__content__lower__user
-            = link_to activity.owner.name, activity.owner if activity.owner
-            さんが
+            = "#{activity.owner.name}さんが" if activity.owner
         %span.timeline__content__lower__group
-            = link_to activity.trackable.name, activity.trackable
+            = link_to activity.trackable.name, group_messages_path(activity.trackable)
             を
         %span.timeline__content__lower__action
             - action = activity.key == "group.create" ? "作成" : "更新"
